--- a/array/array.html
+++ b/array/array.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="./callback4.js"></script>
+    <script src="./array4.js"></script>
 </head>
 <body>
     
