--- a/dom/form.html
+++ b/dom/form.html
@@ -11,7 +11,7 @@
     <form onsubmit="submitHandler(event)">
         <div>
             <label for="name">Name</label>
-            <input type="text" id="name" onkeyup="checkName()">
+            <input type="text" id="name" onkeyup="checkName">
             <span id="nameerror"></span>
         </div>
         <div>
